tests/semantic/pass/ternary_char_int.c
int main(void) {
   int i;
   char c;
   0 ? c : i; 
   return 0;
}
