tests/semantic/fail/goto_scope1.c
struct S;

int main(void) {
foo:;
}

int bar(void) {
  goto foo;
  return 0;
}
